// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HealthOverview > matches snapshot with critical data 1`] = `
<div>
  <div
    class="health-overview"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        项目健康总览
      </h2>
      <div
        class="card-subtitle"
      >
        项目任务、PR及质量指标
      </div>
    </div>
    <div
      class="overview-content"
    >
      <div
        class="overall-score"
      >
        <div
          class="score-circle"
        >
          <svg
            height="120"
            viewBox="0 0 120 120"
            width="120"
          >
            <circle
              cx="60"
              cy="60"
              fill="none"
              r="54"
              stroke="#e0e0e0"
              stroke-width="12"
            />
            <circle
              cx="60"
              cy="60"
              fill="none"
              r="54"
              stroke="#f44336"
              stroke-dasharray="152.685 340"
              stroke-dashoffset="85"
              stroke-width="12"
              transform="rotate(-90 60 60)"
            />
          </svg>
          <div
            class="score-value"
          >
            45
          </div>
          <div
            class="score-label"
          >
            严重
          </div>
        </div>
        <div
          style="margin-top: 16px; text-align: center;"
        >
          <div
            style="font-size: 14px; color: #666;"
          >
            品质评分
          </div>
        </div>
      </div>
      <div
        class="metrics-grid"
      >
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            任务完成率
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              40
              %
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 40%; background-color: #f44336;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              8
               / 
              20
               任务
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            PR 合并率
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              33
              %
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 33%; background-color: #f44336;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              5
               / 
              15
               PRs
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            平均指摘频率
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              12.3
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 100%; background-color: #f44336;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              评论数 / PR
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            饱和度评分
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              92
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 92%; background-color: #4caf50;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              资源使用效率
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            项目运行时间
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              200
               天
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 54.794520547945204%; background-color: #2196f3;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              从第一个 Issue 起
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            整体延迟率
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              25
              %
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 25%; background-color: #f44336;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              延迟任务比例
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HealthOverview > matches snapshot with healthy data 1`] = `
<div>
  <div
    class="health-overview"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        项目健康总览
      </h2>
      <div
        class="card-subtitle"
      >
        项目任务、PR及质量指标
      </div>
    </div>
    <div
      class="overview-content"
    >
      <div
        class="overall-score"
      >
        <div
          class="score-circle"
        >
          <svg
            height="120"
            viewBox="0 0 120 120"
            width="120"
          >
            <circle
              cx="60"
              cy="60"
              fill="none"
              r="54"
              stroke="#e0e0e0"
              stroke-width="12"
            />
            <circle
              cx="60"
              cy="60"
              fill="none"
              r="54"
              stroke="#4caf50"
              stroke-dasharray="288.405 340"
              stroke-dashoffset="85"
              stroke-width="12"
              transform="rotate(-90 60 60)"
            />
          </svg>
          <div
            class="score-value"
          >
            85
          </div>
          <div
            class="score-label"
          >
            健康
          </div>
        </div>
        <div
          style="margin-top: 16px; text-align: center;"
        >
          <div
            style="font-size: 14px; color: #666;"
          >
            品质评分
          </div>
        </div>
      </div>
      <div
        class="metrics-grid"
      >
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            任务完成率
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              75
              %
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 75%; background-color: #ff9800;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              30
               / 
              40
               任务
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            PR 合并率
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              72
              %
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 72%; background-color: #ff9800;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              18
               / 
              25
               PRs
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            平均指摘频率
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              6.4
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 64%; background-color: #ff9800;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              评论数 / PR
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            饱和度评分
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              78
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 78%; background-color: #ff9800;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              资源使用效率
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            项目运行时间
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              120
               天
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 32.87671232876712%; background-color: #2196f3;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              从第一个 Issue 起
            </div>
          </div>
        </div>
        <div
          class="metric-item"
        >
          <div
            class="metric-label"
          >
            整体延迟率
          </div>
          <div
            class="metric-value"
          >
            <span
              class="value"
            >
              12
              %
            </span>
            <div
              class="metric-bar"
            >
              <div
                class="metric-fill"
                style="width: 12%; background-color: #ff9800;"
              />
            </div>
            <div
              style="font-size: 12px; color: #666; margin-top: 4px;"
            >
              延迟任务比例
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
